# nodx

./: .gitignore  CLAUDE.md  PRD.md  README.md  README.zh-CN.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  package.json  pnpm-lock.yaml  prototype.html  tsconfig.base.json
.github/workflows/: build-desktop-windows.yml  check-desktop-windows.yml
apps/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/desktop/: .env.example  index.html  package.json  pet.html  popover.html  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  migrations.rs  os_actions.rs  pet.rs
apps/desktop/src-tauri/src/ai_gateway/: anthropic.rs  cli_mode.rs  gemini.rs  keychain.rs  mod.rs
apps/desktop/src-tauri/src/system_capture/: mod.rs
apps/desktop/src/ai/: auto-recursion-policy.test.ts  auto-recursion-policy.ts  auto-recursion.ts  cbr.ts  chat.ts  document.ts  execution.ts  explain.ts  gateway.ts  illustrate.ts  os-dispatch.test.ts  os-dispatch.ts  panel.ts  plan-record.test.ts  plan-record.ts  pricing.test.ts  pricing.ts  replay.ts  report.ts  survey.ts  synthesize.ts
apps/desktop/src/components/: CenterPanel.tsx  ChatThread.tsx  DocumentView.tsx  ExplainTrigger.tsx  FactorListCard.tsx  Header.tsx  LeftPanel.tsx  NetworkGraphView.tsx  RightPanel.tsx  SettingsView.tsx  SpawnChildButton.tsx  SurveyCard.tsx  TopicTabsBar.tsx
apps/desktop/src/components/attention/: AttentionInboxView.tsx
apps/desktop/src/components/auto-recursion/: AutoRecursionModal.tsx
apps/desktop/src/components/cbr/: CaseSearchView.tsx
apps/desktop/src/components/doc/: MermaidCodeBlock.tsx
apps/desktop/src/components/graph/: MaterialNode.tsx  MaterialPicker.tsx  SynthesisModal.tsx  TopicNode.tsx
apps/desktop/src/components/panel/: ExpertPanelView.tsx  LocalMaxCard.tsx  MergePreviewModal.tsx  PanelMembers.tsx  PanelTranscript.tsx  local-max-markdown.test.ts  local-max-markdown.ts  roles.ts
apps/desktop/src/components/replay/: ReplayCard.tsx
apps/desktop/src/components/report/: ReportModal.tsx
apps/desktop/src/db/: attentions.ts  auto-recursion.ts  bundle.ts  cases.ts  client.ts  comments.ts  documents.ts  materials.ts  messages.ts  panels.ts  report.ts  sessions.ts  topics.ts
apps/desktop/src/i18n/: index.ts  strings.ts
apps/desktop/src/lib/: anchor-layout.ts  bundle-file.ts  canvas-topics.ts  markdown.ts  media.ts
apps/desktop/src/pet/: PetApp.tsx  pet.css
apps/desktop/src/popover/: PopoverApp.tsx  main.tsx
apps/extension/: PRD.md  PRIVACY.md  README.md  STORE.md  manifest.json  package.json  tsconfig.json  vite.config.ts
apps/extension/native-host/: install.sh
apps/extension/scripts/: pack.sh
apps/extension/src/background/: service-worker.ts
apps/extension/src/content/: content.ts  handoff-modal.ts  highlights-layer.ts  marquee.ts  radial-menu.ts
apps/extension/src/options/: options.css  options.html  options.tsx
apps/extension/src/popup/: popup.css  popup.html  popup.tsx
apps/extension/src/shared/: capture.ts  dispatch.ts  highlights.ts  history.ts  i18n.ts  markdown.ts  model-catalog.ts  prompts.ts  providers.ts  radial-actions.ts  save-hook.ts  search-presets.ts  settings.ts  snippets.ts  wheel.ts
apps/extension/src/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.tsx
apps/ios/: Info.plist  README.md
apps/ios/nodx/: AIClients.swift  ActionLog.swift  Actions.swift  CaptureView.swift  Dispatch.swift  HistoryView.swift  MarqueeView.swift  NodxApp.swift  Prefs.swift  RadialMenuView.swift  ResultCard.swift  SettingsView.swift  WheelConfig.swift  nodx.entitlements
apps/ios/nodx-share/: Info.plist  ShareViewController.swift
apps/ios/nodx-shared/: AIClients.swift  Dispatch.swift  Prefs.swift  TextAI.swift  WheelConfig.swift
apps/ios/nodx.xcodeproj/: project.pbxproj
apps/lens-mac/: DISTRIBUTION.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/lens-mac/scripts/: install.sh  pack.sh
apps/lens-mac/src/: main.tsx  styles.css
apps/lens-mac/src-tauri/: Cargo.toml  tauri.conf.json
apps/lens-mac/src-tauri/capabilities/: default.json
apps/lens-mac/src-tauri/icons/: icon.icns
apps/lens-mac/src-tauri/src/: main.rs
apps/lens-mac/src/lib/: prompts.ts  providers.ts
apps/pet/: index.html  package.json  settings.html  vite.config.ts
apps/pet/src/: PetApp.tsx  SettingsApp.tsx  i18n.ts  main.tsx  pet.css  settings-main.tsx  settings.css  wheel.ts
apps/pet/src-tauri/: Cargo.toml  tauri.conf.json
apps/pet/src-tauri/capabilities/: default.json
apps/pet/src-tauri/src/: ai.rs  capture.rs  lib.rs  main.rs
apps/web/: README.md  i18n.js  index.html  privacy.html  robots.txt  sitemap.xml  styles.css  support.html
apps/web/downloads/: .gitkeep
apps/web/functions/api/: install-ping.js  install-stats.js
apps/web/nodx/: index.html
apps/web/nodx/android-test/: index.html
apps/web/nodx/lens/: index.html  install-mac.html
apps/web/nodx/lens-host/: host.mjs  install.sh
apps/web/nodx/pricing/: index.html
apps/web/nodx/pricing/join/: index.html
apps/web/scripts/: sync.sh
docs/: auto-recursion.md  cbr.md  cli-provider.md  execution-nodes.md  expert-panel.md  i18n-migration.md  image-capture.md  inproc-gateway.md  materials.md  multiplatform-roadmap.md  nodx-progress-2026-07-09.md  replay.md  windows-build.md
pitch/: build-en.js  build-zh.js
scripts/: release-desktop.sh
workers/ai-gateway/: .dev.vars.example  package.json  tsconfig.json  wrangler.toml
workers/ai-gateway/src/: anthropic.ts  gemini.ts  index.test.ts  index.ts
workers/cli-gateway/: README.md  package.json
workers/cli-gateway/src/: server.mjs
workers/install-stats/: wrangler.toml
workers/install-stats/src/: index.mjs
(+44 files in other folders)
