[package]
name = "nodx-desktop"
version = "0.0.0"
description = "nodx — AI 决策思考工作台 (desktop)"
authors = ["nodx team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nodx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0" }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
