[package]
name = "nodx-desktop"
version = "0.6.0"
description = "nodx — AI 决策思考工作台 (desktop)"
authors = ["nodx team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nodx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# tray-icon needed for menu-bar presence (0.3 task: lens-mac merger)
tauri = { version = "2.11.0", features = ["protocol-asset", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
urlencoding = "2.1"

# 0.3 — System-wide select-and-explain (merged from lens-mac).
# clipboard for save/restore around the synthesised ⌘+C.
tauri-plugin-clipboard-manager = "2"

# In-proc AI gateway (replaces the Cloudflare worker for desktop usage).
# Lets nodx.app be truly self-contained — no terminal, no worker process.
# Pinned to feature subsets that don't fight with Tauri's own tokio runtime
# (no signal handlers, no process reaper conflicts).
tokio = { version = "1.40", features = ["rt", "net", "io-util", "macros", "time", "process"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
bytes = "1.8"

# Secure API key storage in the OS keychain (macOS Keychain / Windows
# Credential Locker / Linux Secret Service). Keys NEVER touch disk in
# plain text. apple-native is on by default on macOS targets.
keyring = { version = "3.6", features = ["apple-native", "windows-native"] }

# Constant-time bearer comparison.
subtle = "2.6"

# Base64 decode for image capture POST bodies from the Chrome extension.
# We take the image bytes as base64-in-JSON rather than multipart because
# it's the simplest thing to send from a MV3 service worker.
base64 = "0.22"

# UUIDs for image filenames (media/{uuid}.png).
uuid = { version = "1.11", features = ["v4"] }

# ── Platform-specific ────────────────────────────────────────────────
# CGEvent keyboard synthesis for the ⌥+E system capture. KEEP THIS SECTION
# LAST: any general dependency added below the target header silently
# becomes macOS-only and breaks the Windows build (that exact mistake put
# the whole AI gateway behind this cfg once).
# Desktop only (macOS/Windows/Linux): menu-bar tray + the global ⌥+E
# shortcut. Neither concept exists on iOS/Android.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2.11.0", features = ["protocol-asset", "tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
# Non-activating floating panel for the desktop pet: clicking it must NOT
# steal focus from the app that holds the user's text selection, so we can
# synthesise ⌘C against that app. Standard Tauri approach for spotlight-
# style overlays.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
