[package]
name = "nodx-pet"
version = "1.0.0"
description = "nodx Lens — desktop AI pet"
authors = ["Aicon Solutions"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nodx_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.11.0", features = ["macos-private-api", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1.40", features = ["rt", "process", "time", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3.6", features = ["apple-native", "windows-native"] }
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }

# Desktop only: menu-bar tray + the global ⌥+E shortcut.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2.11.0", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"

# KEEP LAST — anything added under this header silently becomes macOS-only.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
